// booking.proto

syntax = "proto3";

package booking;

option go_package = "/pb";

service BookingService {
  rpc Booking(BookingRequest) returns (BookingResponse);
}

message BookingRequest {
  int32 ticket_id = 1;
  string booking_name = 2;
  string email = 3;
}

message BookingResponse {
  int32 booking_id = 1;
  int32 ticket_id = 2;
  string booking_name = 3;
  string email = 4;
}